--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/igvteam/igv-webapp#readme",
   "devDependencies": {
     "fs-extra": "^8.1.0",
+    "google-utils": "github:igvteam/google-utils#v1.0.2",
     "igv": "^2.15.5",
     "igv-widgets": "github:igvteam/igv-widgets#v1.5.4",
-    "google-utils": "github:igvteam/google-utils#v1.0.2",
     "rollup": "^2.28.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-strip": "^1.2.2",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "watch": "^1.0.2"
   }
 }
