BXMD-191/BW-132 Feat: Only show data directory in the load track modal modified:   js/loadTracksFromServerWidget.js modified:   package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Douglass Turner and Jim Robinson",
   "license": "MIT",
   "scripts": {
-    "build": "node scripts/updateVersion.js && node scripts/clean.js && rollup -c && node scripts/copyArtifacts.js"
+    "build": "node scripts/updateVersion.js && node scripts/clean.js && rollup -c && node scripts/copyArtifacts.js && mkdir dist/data"
   },
   "repository": {
     "type": "git",
